Complete project css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
+
   <title>Frontend Mentor | Blog preview card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -15,20 +16,30 @@
   </style>
 </head>
 <body>
+  <main id="card">
+    <section class="img">
+      <img class="top" src="./assets/images/illustration-article.svg" alt="bright image.">
+    </section>
+    <section class="btn-date">
+      <button>Learning</button>
+      <p class="date">Published 21 Dec 2023</p>
+    </section>
+    <section class="text">
+      <h1>HTML & CSS foundations</h1>
+      <p class="para">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+    </section>
+    <section class="user">
+      <img class="headshot" src="./assets/images/image-avatar.webp" alt="headshot of Greg.">
+      <p class="name">Greg Hooper</p>
+    </section>
 
-  Learning
 
-  Published 21 Dec 2023
+  </main>
 
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
   
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Your Name Here</a>. -->
   </div>
 </body>
 </html>
